Supporting all textareas

--- a/popup.html
+++ b/popup.html
@@ -110,7 +110,7 @@
                     <span id="gpt-key-failure" class = "label label-danger" style="display: none">Unable to save key. Ensure the key is valid</span>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control rounded-3" id="gpt-key-value" placeholder="sk-dadsad" required>
-                        <label for="gpt-key-value">API Key</label>
+                        <label for="gpt-key-value">Set API Key</label>
                     </div>
 
                     <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" id="gpt-key-submit" type="button">Save</button>
