Added choice of models in popup

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
     <title>API Key</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/modals.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
