--- a/popup.html
+++ b/popup.html
@@ -131,7 +131,7 @@
                     <p class="text-body-secondary"><a target="_blank"  href="https://platform.openai.com/account/api-keys">Get your API key from Open AI dashboard.</a> </p>
                     <hr class="my-4">
                     <h2 class="fs-5 fw-bold mb-3">For support or feedback</h2>
-                    <a href="https://www.ainotemaker/support" target="_blank" class="btn btn-primary">Contact</a>
+                    <a href="https://www.ainotemaker.com/contact-8" target="_blank" class="btn btn-primary">Contact</a>
 
                 </form>
             </div>
