Made check for premium happen only once.

--- a/popup.html
+++ b/popup.html
@@ -130,6 +130,7 @@
                     <small class="text-body-secondary">Your key is safe and will not be shared with anyone. It will be stored in your local machine.</small>
                     <p class="text-body-secondary"><a target="_blank"  href="https://platform.openai.com/account/api-keys">Get your API key from Open AI dashboard.</a> </p>
                     <hr class="my-4">
+                    <small id="error_message" class="label label-danger text-body-secondary" style="display: none"></small>
                     <h2 class="fs-5 fw-bold mb-3">For support or feedback</h2>
                     <a href="https://www.ainotemaker.com/contact-8" target="_blank" class="btn btn-primary">Contact</a>
 
