--- a/popup.html
+++ b/popup.html
@@ -102,10 +102,13 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content rounded-4 shadow">
             <div class="modal-header p-5 pb-4 border-bottom-0">
-                <h1 class="fw-bold mb-0 fs-2">Save your OpenAI Key</h1>
+                <h1 class="fw-bold mb-0 fs-2">Setup AI Notemaker</h1>
             </div>
 
             <div class="modal-body p-5 pt-0">
+                <small id="need_premium" class="label label-danger text-body-secondary" style="display: none">Please register to access AI Notemaker on premium sites. Register at 
+                <a target="_blank" href="https://bit.ly/ainmpay" >AI Notemaker</a></small>
+                <small id="error_message" class="label label-danger text-body-secondary" style="display: none"></small>
                 <form class="form-inline">
                     <span id="gpt-key-success" class = "label label-success" style="display: none">API Key Saved</span>
                     <span id="gpt-key-failure" class = "label label-danger" style="display: none">Unable to save key. Ensure the key is valid</span>
@@ -130,7 +133,7 @@
                     <small class="text-body-secondary">Your key is safe and will not be shared with anyone. It will be stored in your local machine.</small>
                     <p class="text-body-secondary"><a target="_blank"  href="https://platform.openai.com/account/api-keys">Get your API key from Open AI dashboard.</a> </p>
                     <hr class="my-4">
-                    <small id="error_message" class="label label-danger text-body-secondary" style="display: none"></small>
+                    
                     <h2 class="fs-5 fw-bold mb-3">For support or feedback</h2>
                     <a href="https://www.ainotemaker.com/contact-8" target="_blank" class="btn btn-primary">Contact</a>
 
